--- a/CSS.css
+++ b/CSS.css
@@ -25,12 +25,14 @@ h1.darkMode {
 }
 
 ul.topNav {
-    pardding: 0px;
-    margin: 0px;
+    pardding: 0 0;
+    margin: 0;
     background-color: black;
     display: inline-block;
     transition: background-color 1s;
     position: fixed;
+    width: 100%;
+    overflow: hidden;
 }
 ul.topNav.darkMode {
     background-color: white;
