--- a/CSS.css
+++ b/CSS.css
@@ -25,7 +25,7 @@ h1.darkMode {
 }
 
 ul.topNav {
-    pardding: 0 0;
+    pardding: 0;
     margin: 0;
     background-color: black;
     display: inline-block;
@@ -33,6 +33,7 @@ ul.topNav {
     position: fixed;
     width: 100%;
     overflow: hidden;
+    list-style-type: none;
 }
 ul.topNav.darkMode {
     background-color: white;
@@ -47,6 +48,7 @@ ul.topNav li a {
     color: white;
     padding: 10;
     transition: color 1s;
+    display: block;
 }
 ul.topNav.darkMode li a {
     color: black;
