--- a/CSS.css
+++ b/CSS.css
@@ -30,7 +30,8 @@ ul.topNav {
     background-color: black;
     display: inline-block;
     transition: background-color 1s;
-    position: fixed;
+    position: sticky;
+    position: -webkit-sticky;
     width: 100%;
     overflow: hidden;
     list-style-type: none;
@@ -49,6 +50,7 @@ ul.topNav li a {
     padding: 10;
     transition: color 1s;
     display: block;
+    text-decoration: none;
 }
 ul.topNav.darkMode li a {
     color: black;
