--- a/CSS.css
+++ b/CSS.css
@@ -25,7 +25,7 @@ h1.darkMode {
 }
 
 ul.topNav {
-    pardding: 0;
+    padding: 0;
     margin: 0;
     background-color: black;
     display: inline-block;
@@ -48,12 +48,68 @@ ul.topNav li {
 
 ul.topNav li a {
     color: white;
-    padding: 5px 0px;
-    font-size: 150%;
+    padding: 14px;
+    font-size: 175%;
     transition: color 1s;
     display: block;
     text-decoration: none;
+    text-align: center;
 }
 ul.topNav.darkMode li a {
     color: black;
+}
+
+ul.sticky {
+    position: fixed;
+    top: 0;
+}
+.sticky + .topNavbarWrapper {
+    padding-top: 100px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 75px;
+    height: 34px;
+}
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: white;
+    -webkit-transition: 1s;
+    transition: 1s;
+    border-radius: 34px;
+}
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: black;
+    -webkit-transition: 1s;
+    transition: 1s;
+}
+input:checked + .slider {
+    background-color: black;
+}
+input:checked + .slider:before {
+    -webkit-transform: translateX(40px);
+    -ms-transform: translateX(40px);
+    transform: translateX(40px);
+    background-color: white;
+}
+.slider:before {
+    border-radius: 50%;
 }
