Few Bootstrap stuff needed dark theme

--- a/RECOURCES/CSS.css
+++ b/RECOURCES/CSS.css
@@ -31,12 +31,20 @@ a.darkMode:hover {
     color: green;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, .page-header {
     color: black;
     transition: color 1s;
 }
 h1.darkMode {
     color: white;
+}
+
+.jumbotron {
+    background-color: #ccc;
+    transition: background-color 1s;
+}
+.jumbotron.darkMode {
+    background-color: #333;
 }
 
 ul.topNav {
