--- a/RECOURCES/CSS.css
+++ b/RECOURCES/CSS.css
@@ -35,7 +35,7 @@ h1, h2, h3, h4, h5, h6, .page-header {
     color: black;
     transition: color 1s;
 }
-h1.darkMode {
+h1.darkMode, h2.darkMode, h3.darkMode, h4.darkMode, h5.darkMode, h6.darkMode, .page-header.darkMode {
     color: white;
 }
 
