--- a/RECOURCES/CSS.css
+++ b/RECOURCES/CSS.css
@@ -8,6 +8,10 @@ body.darkMode {
     background-color: black;
 }
 
+p, a {
+    font-size: 150%;
+}
+
 p {
     color: black;
     transition: color 1s;
@@ -44,6 +48,7 @@ h1.darkMode, h2.darkMode, h3.darkMode, h4.darkMode, h5.darkMode, h6.darkMode, .p
 }
 .page-header.darkMode {
     border-bottom: 1px solid #333;
+}
 
 .jumbotron {
     background-color: #ccc;
