--- a/RECOURCES/CSS.css
+++ b/RECOURCES/CSS.css
@@ -58,6 +58,27 @@ h1.darkMode, h2.darkMode, h3.darkMode, h4.darkMode, h5.darkMode, h6.darkMode, .p
     background-color: #333;
 }
 
+button {
+    background-color: #ccc;
+    color: black;
+    outline: none;
+    border:none;
+    transition: background 1s, color 1s;
+}
+button:hover {
+    background-color: #333;
+    color: white;
+}
+button.darkMode {
+    background-color: #333;
+    color: white;
+    transition: color 1s;
+}
+button.darkMode:hover {
+    background-color: #ccc;
+    color: black;
+}
+
 ul.topNav {
     padding: 0;
     margin: 0;
