Did this fix the navbar?
(┛◉Д◉)┛彡┻━┻

--- a/RECOURCES/CSS.css
+++ b/RECOURCES/CSS.css
@@ -88,7 +88,6 @@ ul.topNav {
     position: sticky;
     position: -webkit-sticky;
     width: 100%;
-    overflow: hidden;
     list-style-type: none;
 }
 ul.topNav.darkMode {
@@ -101,6 +100,8 @@ ul.topNav li {
     float: left;
     display: block;
     padding: 10px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 ul.topNav li:hover {
     background-color: #333;
@@ -206,6 +207,7 @@ ul.footer li a {
     transition: color 1s;
     display: inline-block;
     margin: 10px;
+    text-align: center;
 }
 ul.footer li a:hover {
     color: red;
