--- a/RECOURCES/CSS.css
+++ b/RECOURCES/CSS.css
@@ -100,8 +100,7 @@ ul.topNav li {
     float: left;
     display: block;
     padding: 10px;
-    margin-top: auto;
-    margin-bottom: auto;
+    line-height: 80px;
 }
 ul.topNav li:hover {
     background-color: #333;
