--- a/RECOURCES/CSS.css
+++ b/RECOURCES/CSS.css
@@ -112,8 +112,9 @@ ul.topNav.darkMode li:hover {
     background-color: #ccc;
 }
 
-ul.topNav li label {
-    text-align: center;
+ul.topNav li .switch {
+    vertical-align: center;
+    horizontal-align: center;
 }
 
 ul.topNav li a {
