--- a/RECOURCES/CSS.css
+++ b/RECOURCES/CSS.css
@@ -88,7 +88,8 @@ ul.topNav {
     transition: background-color 1s;
     position: sticky;
     position: -webkit-sticky;
-    width: 100vh;
+    width: 100%;
+    box-sizing: content-box;
     list-style-type: none;
 }
 ul.topNav.darkMode {
