--- a/RECOURCES/CSS.css
+++ b/RECOURCES/CSS.css
@@ -43,11 +43,19 @@
     --ulTopnavLiA: white;
 }
 
+* {
+    transition: 1s;
+}
+
 body {
     margin: 0;
     padding: 0;
     background-color: var(--bodyBg);
-    transition: background-color 1s;
+}
+
+.pageContent {
+    box-sizing: border-box;
+    padding: 15px;
 }
 
 p, a {
@@ -57,27 +65,22 @@ p, a {
 
 p {
     color: var(--p);
-    transition: color 1s;
 }
 
 a {
     text-decoration: none !important;
     color: var(--a);
-    transition: color 1s;
 }
 
 h1, h2, h3, h4, h5, h6 {
     color: var(--h);
-    transition: color 1s;
     border-bottom: 1px solid var(--hBorderBottom);
-    transition: border-bottom 1s, color 1s;
     font-family: 'alata';
     font-size: 135%;
 }
 
 .jumbotron {
     background-color: var(--jumbotronBg);
-    transition: background-color 1s;
     border-radius: 5px;
 }
 .jumbotron * {
@@ -90,7 +93,6 @@ button {
     color: var(--button);
     outline: none;
     border: none;
-    transition: background-color 1s, color 1s;
     margin: 0px;
     padding: 5px;
     border-radius: 5px;
@@ -102,7 +104,6 @@ ul.topNav {
     margin: 0;
     background-color: var(--ulTopNav);
     display: inline-block;
-    transition: background-color 1s;
     position: sticky;
     position: -webkit-sticky;
     width: 100%;
@@ -112,7 +113,6 @@ ul.topNav {
 }
 
 ul.topNav li {
-    transition: background-color 1s;
     background-color: var(--ulTopNavLiBg);
     float: left;
     display: block;
@@ -159,8 +159,6 @@ ul.topNav li a {
     right: 0;
     bottom: 0;
     background-color: white;
-    -webkit-transition: 1s;
-    transition: 1s;
     border-radius: 34px;
     transform: translateY(20%);
 }
@@ -172,8 +170,6 @@ ul.topNav li a {
     left: 4px;
     bottom: 4px;
     background-color: black;
-    -webkit-transition: 1s;
-    transition: 1s;
 }
 input:checked + .slider {
     background-color: black;
@@ -192,7 +188,6 @@ ul.footer {
     display: inline-block;
     width: 100%;
     border-top: 1px solid #ccc;
-    transition: 1s;
     overflow: hidden;
 }
 ul.footer.darkMode {
@@ -205,7 +200,6 @@ ul.footer li {
 ul.footer li a {
     text-decoration: none !important;
     color: var(--ulFooterLiA);
-    transition: color 1s;
     display: inline-block;
     margin: 10px;
     text-align: center;
