--- a/RECOURCES/CSS.css
+++ b/RECOURCES/CSS.css
@@ -14,7 +14,7 @@
     --ulFooterLiA: blue;
     --loadingScreenBg: #cccccc;
 }
-.darkMode {
+.darkMode, .darkMode > * {
     --bodyBg: black;
     --p: white;
     --a: orange;
@@ -30,14 +30,14 @@
     --ulFooterLiA: orange;
     --loadingScreenBg: #333333;
 }
-.pageContent > *:hover, ul.topNav > *:hover, ul.footer > *:hover {
+body > *:hover {
     --a: red;
     --button: white;
     --buttonBg: #333;
     --ulTopNavLiBg: #333;
     --ulTopnavLiA: black;
 }
-.darkMode:hover, ul.topNav.darkMode > *:hover, ul.footer > *:hover {
+body > *.darkMode:hover {
     --a: green;
     --button: black;
     --buttonBg: #ccc;
@@ -203,7 +203,7 @@ ul.footer li a {
     text-align: center;
 }
 
-* {
+body, body > * {
     transition: 1s;
     box-sizing:border-box;
 }
