--- a/RECOURCES/CSS.css
+++ b/RECOURCES/CSS.css
@@ -10,7 +10,7 @@
     --ulTopNav: black;
     --ulTopNavLiBg: #ccc;
     --ulTopNavLiA: white;
-    --ulFooterBorderBottom: #ccc;
+    --ulFooterBorderTop: #ccc;
     --ulFooterLiA: blue;
     --loadingScreenBg: #cccccc;
 }
@@ -26,7 +26,7 @@
     --ulTopNav: white;
     --ulTopNavLiBg: #333;
     --ulTopNavLiA: black;
-    --ulFooterBorderBottom: #333;
+    --ulFooterBorderTop: #333;
     --ulFooterLiA: orange;
     --loadingScreenBg: #333333;
 }
@@ -168,28 +168,15 @@ ul.topNav li a {
     bottom: 4px;
     background-color: black;
 }
-input:checked + .slider {
-    background-color: black;
-}
-input:checked + .slider::before {
-    -webkit-transform: translateX(40px);
-    -ms-transform: translateX(40px);
-    transform: translateX(40px);
-    background-color: white;
-}
-.slider::before {
-    border-radius: 50%;
-    transition: 1s;
-}
+input:checked + .slider {background-color: black;}
+input:checked + .slider::before {background-color: white; transform: translateX(40px);}
+.slider::before {border-radius: 50%;transition: 1s;}
 
 ul.footer {
     display: inline-block;
     width: 100%;
-    border-top: 1px solid #ccc;
+    border-top: var(--ulFooterBorderTop);
     overflow: hidden;
-}
-ul.footer.darkMode {
-    border-top: 1px solid #333;
 }
 ul.footer li {
     list-style-type: none;
@@ -203,7 +190,7 @@ ul.footer li a {
     text-align: center;
 }
 
-body, body > * {
+html > * {
     transition: 1s;
     box-sizing:border-box;
 }
