--- a/RECOURCES/CSS.css
+++ b/RECOURCES/CSS.css
@@ -31,13 +31,7 @@
     --loadingScreenBg: #333333;
 }   
 
-is(
-*,
-* > *,
-* > * > *,
-* > * > * > *,
-* > * > * > * > *
-):hover {
+:is(*,*>*,*>*>*,*>*>*>*,*>*>*>*>*):hover {
     --a: red;
     --button: white;
     --buttonBg: #333;
@@ -51,7 +45,7 @@ is(
     --ulTopNavLiBg: #ccc;
     --ulTopnavLiA: white;
 }
-*, * > * {transition: 1s; box-sizing: border-box;}
+* {transition: 1s; box-sizing: border-box;}
 body {margin: 0; padding: 0; background-color: var(--bodyBg);}
 .pageContent {padding: 15px;}
 
