--- a/recources/style.css
+++ b/recources/style.css
@@ -170,3 +170,8 @@ ul.footer li a {
     margin: 10px;
     text-align: center;
 }
+
+@keyframes spin {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
