--- a/recources/style.css
+++ b/recources/style.css
@@ -88,6 +88,7 @@ button {background-color: var(--buttonBg); color: var(--button); outline: none; 
     display: block;
     padding: 10px;
     line-height: 50px;
+    transition: 1s;
 }
 .topNav li a {
     color: var(--ulTopNavLiA);
