--- a/recources/style.css
+++ b/recources/style.css
@@ -54,6 +54,35 @@ body {margin: 0; padding: 0; background-color: var(--bodyBg); width: 100%; heigh
     --ulTopnavLiA: white;
 }
 
+#loadingScreen {
+     transition: 0s;
+     position: fixed;
+     top: 0;
+     bottom: 0;
+     right: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     background-color: var(--loadingScreenBg);
+     box-sizing: content-box;
+     z-index: 1;
+}
+#loader {
+     position: absolute;
+     top: 0;
+     bottom: 0;
+     left: 0;
+     right: 0;
+     border: 30px solid var(--loader);
+     border-radius: 50%;
+     animation: spin 1s linear infinite;
+     border-top: 30px solid var(--loaderTop);
+     width: 150px;
+     height: 150px;
+     transition: 0s;
+     margin: auto;
+}
+
 /**/
 p, a {font-size: 150%; font-family: 'alata';}
 p {color: var(--p);}
